🐛 Bugfix for navbar out of bounds mobile Safari

--- a/static/css/snuggle.css
+++ b/static/css/snuggle.css
@@ -647,6 +647,10 @@ iframe {
 		width: 100%;
 	}
 
+	#nav.alt {
+		width: 80%;
+	}
+
 	#main {
 		border-radius: 0;
 	}
